--- a/tvexterna/tvexterna.html
+++ b/tvexterna/tvexterna.html
@@ -57,6 +57,10 @@
                     <source src="1upvideo.mp4" type="video/mp4">
                 </video>
             </div>
+            <div class="swiper-slide">
+                <img data-src="./banners/pao-na-chapa.jpg" class="swiper-lazy" />
+                <div class="swiper-lazy-preloader"></div>
+            </div>
             <!-- <div class="swiper-slide">
                 <img data-src="./banners/pao-na-chapa.jpg" class="swiper-lazy" />
                 <div class="swiper-lazy-preloader"></div>
@@ -81,7 +85,7 @@
                 },
                 loop: true,
                 autoplay: {
-                    delay: 15000,
+                    delay: 30000,
                 },
                 preloadImages: false,
                 lazy: true,
