--- a/tvexterna/tvexterna.html
+++ b/tvexterna/tvexterna.html
@@ -59,7 +59,7 @@
                     <source src="1upvideo.mp4" type="video/mp4">
                 </video>
             </div>
-            
+            <!-- TERMINA -->
             <!-- COMECA -->
             <div class="swiper-slide">
                 <video width="1980" id="video" autoplay muted loop>
