--- a/tvexterna/tvexterna.html
+++ b/tvexterna/tvexterna.html
@@ -109,6 +109,13 @@
                 </video>
             </div>
             <!-- TERMINA -->
+            <!-- COMECA -->
+            <div class="swiper-slide">
+                <video width="1980" id="video" autoplay muted loop>
+                    <source src="1ANOTELAO.mp4" type="video/mp4">
+                </video>
+            </div>
+            <!-- TERMINA -->
             
             
             <!-- 
