--- a/tvexterna/tvexterna.html
+++ b/tvexterna/tvexterna.html
@@ -60,6 +60,13 @@
                 </video>
             </div>
             <!-- TERMINA -->
+            <!-- COMECA -->
+            <div class="swiper-slide">
+                <video width="1980" id="video" autoplay muted loop>
+                    <source src="PROMO1ANO1UP.mp4" type="video/mp4">
+                </video>
+            </div>
+            <!-- TERMINA -->
              <!-- COMECA -->
             <div class="swiper-slide">
                 <video width="1980" id="video" autoplay muted loop>
@@ -91,6 +98,13 @@
             <!-- COMECA -->
             <div class="swiper-slide">
                 <video width="1980" id="video" autoplay muted loop>
+                    <source src="PROMO1ANO1UP.mp4" type="video/mp4">
+                </video>
+            </div>
+            <!-- TERMINA -->
+            <!-- COMECA -->
+            <div class="swiper-slide">
+                <video width="1980" id="video" autoplay muted loop>
                     <source src="TAKE5.mp4" type="video/mp4">
                 </video>
             </div>
@@ -112,7 +126,7 @@
             <!-- COMECA -->
             <div class="swiper-slide">
                 <video width="1980" id="video" autoplay muted loop>
-                    <source src="1ANOTELAO.mp4" type="video/mp4">
+                    <source src="PROMO1ANO1UP.mp4" type="video/mp4">
                 </video>
             </div>
             <!-- TERMINA -->
