--- a/tvexterna/tvexterna.html
+++ b/tvexterna/tvexterna.html
@@ -63,7 +63,7 @@
             <!-- COMECA -->
             <div class="swiper-slide">
                 <video width="1980" id="video" autoplay muted loop>
-                    <source src="PROMO1ANO1UP.mp4" type="video/mp4">
+                    <source src="1UP.mp4" type="video/mp4">
                 </video>
             </div>
             <!-- TERMINA -->
@@ -98,7 +98,7 @@
             <!-- COMECA -->
             <div class="swiper-slide">
                 <video width="1980" id="video" autoplay muted loop>
-                    <source src="PROMO1ANO1UP.mp4" type="video/mp4">
+                    <source src="1UP.mp4" type="video/mp4">
                 </video>
             </div>
             <!-- TERMINA -->
@@ -126,7 +126,7 @@
             <!-- COMECA -->
             <div class="swiper-slide">
                 <video width="1980" id="video" autoplay muted loop>
-                    <source src="PROMO1ANO1UP.mp4" type="video/mp4">
+                    <source src="1UP.mp4" type="video/mp4">
                 </video>
             </div>
             <!-- TERMINA -->
