--- a/tvexterna/tvexterna.html
+++ b/tvexterna/tvexterna.html
@@ -56,6 +56,13 @@
             <!-- COMECA -->
             <div class="swiper-slide">
                 <video width="1980" id="video" autoplay muted loop>
+                    <source src="1UP.mp4" type="video/mp4">
+                </video>
+            </div>
+            <!-- TERMINA -->
+            <!-- COMECA -->
+            <div class="swiper-slide">
+                <video width="1980" id="video" autoplay muted loop>
                     <source src="pharmapele.mp4" type="video/mp4">
                 </video>
             </div>
