--- a/tvexterna/tvexterna.html
+++ b/tvexterna/tvexterna.html
@@ -64,42 +64,28 @@
              <!-- COMECA -->
             <div class="swiper-slide">
                 <video width="1980" id="video" autoplay muted loop>
-                    <source src="TAKE1.mp4" type="video/mp4">
+                    <source src="11UPGAMES2024.mp4" type="video/mp4">
                 </video>
             </div>
             <!-- TERMINA -->
             <!-- COMECA -->
             <div class="swiper-slide">
                 <video width="1980" id="video" autoplay muted loop>
-                    <source src="TAKE2.mp4" type="video/mp4">
+                    <source src="21UPGAMES2024.mp4" type="video/mp4">
                 </video>
             </div>
             <!-- TERMINA -->
             <!-- COMECA -->
             <div class="swiper-slide">
                 <video width="1980" id="video" autoplay muted loop>
-                    <source src="TAKE3.mp4" type="video/mp4">
+                    <source src="31UPGAMES2024.mp4" type="video/mp4">
                 </video>
             </div>
             <!-- TERMINA -->
             <!-- COMECA -->
             <div class="swiper-slide">
                 <video width="1980" id="video" autoplay muted loop>
-                    <source src="TAKE4.mp4" type="video/mp4">
-                </video>
-            </div>
-            <!-- TERMINA -->
-            <!-- COMECA -->
-            <div class="swiper-slide">
-                <video width="1980" id="video" autoplay muted loop>
-                    <source src="TAKE5.mp4" type="video/mp4">
-                </video>
-            </div>
-            <!-- TERMINA -->
-            <!-- COMECA -->
-            <div class="swiper-slide">
-                <video width="1980" id="video" autoplay muted loop>
-                    <source src="TAKE6.mp4" type="video/mp4">
+                    <source src="41UPGAMES2024.mp4" type="video/mp4">
                 </video>
             </div>
             <!-- TERMINA -->
